@@ -1,4 +1,5 @@
 19.6.09
+    * AR5312/AR2313: nor flash support for erasing nvram on reset button long push (untested)
     * AR5312/AR2313: add support for 32MB ram chips (auto detection)
     * most nor flash chips should be supported, but no guarantee. redboot will display the required ID's for implementation
     * nvram partition will now be automaticly detected if present
